@@ -3,6 +3,7 @@ Version 1.0.10
 
 * Pause all sounds when entering inventory or pause menu.
 * Improve deflection against slopes.
+* Fix crash on loading if static meshes with IDs above maximum are present.
 * Fix sprint value going below zero.
 * Fix fog bulb density formula.
 * Fix electricity effect crashing 64-bit version of the engine.
